--- a/ManagementSystem/appsettings.json
+++ b/ManagementSystem/appsettings.json
@@ -1,12 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "DataSource=Data\\app.db;Cache=Shared"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "NPGSQLConnection": "Host=localhost;Port=5432;Database=ManagementSystemDatabase;Username=postgres;Password=root;"
-  }
+  "AllowedHosts": "*"
 }
