--- a/Database/Database.csproj
+++ b/Database/Database.csproj
@@ -25,6 +25,9 @@
       <None Update="Data\ConnectionStrings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="DataDatabase\ConnectionStrings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
