--- a/ManagementSystem/ManagementSystem.csproj
+++ b/ManagementSystem/ManagementSystem.csproj
@@ -24,4 +24,39 @@
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-grid.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-grid.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-grid.min.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-grid.min.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-grid.rtl.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-grid.rtl.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-grid.rtl.min.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-grid.rtl.min.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-reboot.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-reboot.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-reboot.min.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-reboot.min.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-reboot.rtl.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-reboot.rtl.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-reboot.rtl.min.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-reboot.rtl.min.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-utilities.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-utilities.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-utilities.min.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-utilities.min.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-utilities.rtl.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-utilities.rtl.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-utilities.rtl.min.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap-utilities.rtl.min.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap.min.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap.min.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap.rtl.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap.rtl.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap.rtl.min.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\bcss\bootstrap.rtl.min.css.map" />
+    </ItemGroup>
+
 </Project>
