--- a/ManagementSystem/ManagementSystem.Browser/ManagementSystem.Browser.csproj
+++ b/ManagementSystem/ManagementSystem.Browser/ManagementSystem.Browser.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia.Browser" Version="$(AvaloniaVersion)"/>
+        <PackageReference Include="Avalonia.Browser" Version="11.0.6" />
     </ItemGroup>
 
     <ItemGroup>
