--- a/ManagementSystem/ManagementSystem/ManagementSystem.csproj
+++ b/ManagementSystem/ManagementSystem/ManagementSystem.csproj
@@ -17,7 +17,11 @@
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.6" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.6" />
+        <PackageReference Include="HanumanInstitute.MvvmDialogs.Avalonia" Version="2.1.0" />
+        <PackageReference Include="HanumanInstitute.MvvmDialogs.Avalonia.MessageBox" Version="2.1.0" />
         <PackageReference Include="Material.Avalonia" Version="3.4.0" />
+        <PackageReference Include="MessageBox.Avalonia" Version="3.1.5.1" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
         <PackageReference Include="ReactiveUI" Version="19.5.72" />
         <PackageReference Include="Splat" Version="14.8.12" />
     </ItemGroup>
