--- a/ManagementSystem/ManagementSystem/ManagementSystem.csproj
+++ b/ManagementSystem/ManagementSystem/ManagementSystem.csproj
@@ -36,4 +36,8 @@
         <SubType>Code</SubType>
       </Compile>
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="ViewModels\Basket\" />
+    </ItemGroup>
 </Project>
