--- a/ManagementSystem/ManagementSystem/ManagementSystem.csproj
+++ b/ManagementSystem/ManagementSystem/ManagementSystem.csproj
@@ -22,6 +22,8 @@
         <PackageReference Include="Material.Avalonia" Version="3.4.0" />
         <PackageReference Include="MessageBox.Avalonia" Version="3.1.5.1" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
         <PackageReference Include="ReactiveUI" Version="19.5.72" />
         <PackageReference Include="Splat" Version="14.8.12" />
     </ItemGroup>
