--- a/ManagementSystem/ManagementSystem/ManagementSystem.csproj
+++ b/ManagementSystem/ManagementSystem/ManagementSystem.csproj
@@ -20,6 +20,7 @@
         <PackageReference Include="HanumanInstitute.MvvmDialogs.Avalonia" Version="2.1.0" />
         <PackageReference Include="HanumanInstitute.MvvmDialogs.Avalonia.MessageBox" Version="2.1.0" />
         <PackageReference Include="Material.Avalonia" Version="3.4.0" />
+        <PackageReference Include="Material.Avalonia.DataGrid" Version="3.4.0" />
         <PackageReference Include="MessageBox.Avalonia" Version="3.1.5.1" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
